@@ -1,3 +1,9 @@
+2001-10-23  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
+
+	* generic/tkCursor.c (Tk_GetCursorFromData): Fixed uninit nextPtr
+	field.  [adapted from Patch 473875]
+	(GetCursor): Removed double-assignment to nextPtr field.
+
 2001-10-19  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* library/console.tcl: removed transpose ability until the console
